# Next-Bus-Backend

./: .env.example  .gitignore  LATER_SCOPE_TIMING_UNDO_PLAN.md  README.md  README_OLD.md  TESTING.md  auth.py  firebase.py  launch-template.json  main.py  pyproject.toml  pytest.ini  render.yaml  req_modules.txt  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  t.md  temp-token.py  test.py  tt.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ping.yml  python-tests.yml
common/: __init__.py  config.py  decorators.py  firebase.py
dev/: temp-token.py  test-rate-limit.py
dev-related/: json-env.py  temp-token.py
src/: main.py
src/common/: config.py  decorators.py  firebase.py  response.py
src/v1/: __init__.py  route.py  test.py  time.py  user.py
tests/: conftest.py  test_hello_world.py  test_main.py  test_v1_route.py  test_v1_test.py  test_v1_time.py  test_v1_user.py
v1/: __init__.py  auth.py  base_firebase.py  common.py  common_decorators.py  common_response_base.py  cust_logging.py  decorators.py  firebase.py  future.py  return_type.py  route.py  routes.py  test.py  testing_done.py  time.py  timmings.py  user.py
v1/common/: __init__.py  decorators.py  firebase.py  response_base.py
